--- a/Partie_2.Rmd
+++ b/Partie_2.Rmd
@@ -5,18 +5,18 @@ date: "2024-04-09"
 output: html_document
 bibliography: AmigoTeam.bib
 ---
-# Une modèle pour déterminer l'importance des impacts variables des ouragans sur le long terme des récifs corailiens.  
+# Une modèle pour déterminer l'effet des différente intensité des ouragans sur le long terme des récifs corailiens.  
 
 Par Antoince Castonguay et Félix Richard. L'AmigoTeam.  
 antoine.castonguay@usherbrooke.ca  
-felix.richard@usherbrooke.ca  
+felix.richard3@usherbrooke.ca  
 
 ## Introduction
 Pour lutter contre la dégradation des récifs coralliens, il est crucial d'agir pour préserver cette ressource inestimable qui favorise la biodiversité des océans. Le modèle développé par Blackwood, J.C., Hastings, A. et Mumby, P.J. en 2011 est particulièrement intéressant, car il décrit bien les effets de plusieurs stress et leurs interactions sur la survie des coraux à long terme. 
 
-Ils aborent premierement la compétition de l'espace entre les macroalgue et les coraux. Deuxiemement, ils ajoute au modele la relation consomateur-ressource entre les parrofishs et les macroalgues. En troisieme lieu, la rugosité des coraux est également considérée comme un élément crucial pour la capacité de soutien des populations de parrofishs, tandis que l'effort de pêche joue un rôle important sur la population de parrofishs. Enfin, le modèle inclut un élément stochastique représentant les ouragans, qui ont un impact sur les populations de coraux, de macroalgues et sur la rugosité des coraux. 
+Ils aborent premierement la compétition de l'espace entre les macroalgue et les coraux. Deuxiemement, ils ajoute au modele la relation consomateur-ressource entre les parrofishs et les macroalgues. En troisieme lieu, la rugosité des coraux est également considérée comme un élément crucial pour la capacité de soutien des populations de parrofishs, tandis que l'effort de pêche joue un rôle important sur la population de parrofishs. Enfin, le modèle inclut un élément stochastique représenté par les ouragans, qui ont un impact sur les populations de coraux, de macroalgues et sur la rugosité des coraux. 
 
-Dans notre étude, nous avons cherché à rendre ce modèle plus réaliste en y ajoutant une composante plus variable et aléatoire simulant de manière plus précise l'impact réel des ouragans. De plus, nous avons intégré une augmentation de la fréquence des ouragan au fil des années, ce qui reflète la situation actuelle avec les changements climatiques.
+Dans notre étude, nous avons cherché à rendre ce modèle plus réaliste en y ajoutant une composante plus variable et aléatoire simulant de manière plus précise l'impact réel des ouragans. De plus, nous avons intégré une augmentation de la l'intensité des ouragan au fil des années, ce qui reflète la situation actuelle avec les changements climatiques.
 
 ## Méthode
 
@@ -75,12 +75,278 @@ $F() = 0.0512 + 0.0176*te$ avec un maximun de F() = 0.5.
 
 ## Résultat
 
+```{r}
+corailstochastiquev2 <- function (R0,f,lambda=1/30,impact=0.5,dt=1,graph=FALSE){
+  #on instaure une étendue de temps
+  tmax <- 100
+  t <- 0
+  #le temps au dernier ouragan, en tenant compte que la simulation ne commence pas nécessairement
+  #juste après un ouragan
+  to <- runif(1,0,25.5)
+  
+  #on pose les valeurs de départ et les paramètres
+  C <- 0.56
+  M <- 0.01
+  Y <- 0.43
+  R <- R0
+  P <- 0.5
+  a<-0.1
+  g<-0.8
+  d<-0.44
+  r<-1
+  f<-f
+  s<-0.49
+  ca<--(3.21)
+  cb<-3.65
+  kmax<-17.745
+  delta<-4.557
+  v<-0.9877
+  hG<-0.03
+  hE<-0.01
+  o <- 0.05
+  mH <- 0.8
+  
+  
+  #on initie les vecteurs de résultats
+  vecC <- C
+  vecM <- M
+  vecY <- Y
+  vecR <- R
+  vecP <- P
+  
+  
+  while (t<tmax){
+    
+    #on effectue le tirage pour déterminer si il y a ou pas ouragan
+    ouragan <- pmin(rpois(1,lambda*dt),1)
+    #si oui ou non, on ajuste dq
+    if (ouragan==1){
+      
+      #on calcule le temps depuis le dernier ouragan
+      te <- t - to
+      
+      #on sauve le nouveau temps de dernier ouragan
+      to <- t
+      
+      #on calcule F
+      F <- pmin(0.0512 + 0.0176*(t/200+1)*te, 0.5)
+      G <- (R-1)*0.1
+      
+      #différents dommage selon valeur d'impact
+      
+      #on calcule les dommages d'un fort ouragan
+      dommC <- C*(F + o*runif(1))*pmax(2*impact-0.5,0)
+      dommM <- M*mH*(1+impact*0.25)
+      dommR <- (R-1)*(G + o*runif(1))*(impact*2.25+0.25)
+    
+    }else{
+      dommC <- 0
+      dommM <- 0
+      dommR <- 0
+    }
+    
+    #on calcule les changements
+    dM <- ((a)*M*C - ((1)*P*M/(M+Y)) + (g)*M*Y)*dt - dommM
+    dC <- ((r)*Y*C - (d)*C - (a)*M*C)*dt - dommC
+    dP <- ((s)*P*(1 - (P/((((ca+cb*R)/kmax)*((delta*(M+Y))/(1+v*(M+Y))))))) -(f*s)*P)*dt 
+    dR <- ((hG)*C*(3 - R) - (hE)*(1 - C)*(R - 1))*dt - dommR
+    #dY <- 0 - dM - dC 
+    
+    #on effectue les changements
+    M <- pmax(M + dM,0.0001)
+    C <- pmax(C + dC,0.0001)
+    #Y <- Y + dY
+    Y <- 1 - M - C
+    R <- R + dR
+    P <- pmax(P + dP, 0.0001)
+    
+    #on sauve les nouvelles valeurs dans leur vecteurs
+    vecC <- c(vecC,C)
+    vecM <- c(vecM,M)
+    vecY <- c(vecY,Y)
+    vecR <- c(vecR,R)
+    vecP <- c(vecP,P)
+    
+    #on fait avancer le temps
+    t <- t + dt
+  }
+  #si on veut afficher le graphique
+  if (graph==TRUE){
+    par(mfrow=c(1,1))
+    plot(seq(0,tmax,length.out = length(vecC)),vecC, type="l", col="red", ylim=c(0,1), xlab= "temps", ylab="valeurs")
+    axis(side = 4,at= seq(0,1,0.1),labels = seq(1,3,0.2), )
+    lines(seq(0,tmax,length.out = length(vecM)),vecM, col="blue")
+    lines(seq(0,tmax,length.out = length(vecP)),vecP, col="green")
+    lines(seq(0,tmax,length.out = length(vecR)),(vecR-1)/2, col="pink")
+    legend("topright", legend = c("corail", "macroalgues","poissons","rugosité"),
+           col = c("red","blue","green","pink"), lty = c(1, 1),
+           lwd = 2, bg = "white",cex = 0.75)
+  }
+  #retourne la valeur finale de C et de R
+  return(c(tail(vecC,1),tail(vecR,1)))
+}
+```
+
 La relation entre la rugosité et le niveau d'impact des ouragants sur les récif corialien avec 3 niveau d'effort de peche : 
 
+```{r}
+#graphique de C en fonction de I et R
+graph.imageCIR <- function(fishing,freq,it=10,pas=0.1){
+  
+  matC <- matrix(0, nrow = 21,ncol = 26)
+  matsd <- matrix(0, nrow = 21,ncol = 26)
+  
+  
+  f0<-fishing
+  l<-freq
+  for (i in 1:21) {
+    for (j in 1:26){
+      res <- vector(length = 0)
+      for (z in 1:it) {
+        R1 <- i*0.1+0.9
+        imp <- j*0.04-0.04
+        w <- corailstochastiquev2(R0=R1,f=f0, lambda = l,impact = imp,dt=pas, graph = F)[1]
+        res<-c(res,w)
+      }
+      matC[i,j]<-mean(res)
+      matsd[i,j]<-sd(res)
+    }
+  }
+
+  x_values <- seq(0, 1, length.out = ncol(matC))
+  y_values <- seq(1, 3, length.out = nrow(matC))
+  # Plot the matrix as an image with different colored pixels
+  
+  par(mfrow=c(1,2))
+  image.plot(x = x_values, y = y_values, t(matC), col = viridis(20), 
+             xlab = "impact", ylab = "Rugosité initiale", 
+             main=c("moyenne de C finale",paste(c("fréq:1/",1/l,", fishing:",f0),collapse = "")))
+  image.plot(x = x_values, y = y_values, t(matsd), col = viridis(20),
+             xlab = "impact", ylab = "Rugosité initiale",
+             main=c("écart-type de C finale",paste(c("fréq:1/",1/l,", fishing:",f0),collapse = "")))
+}
+graph.imageCIR(fishing = 0.5, freq = 1/20, it=2, pas = 0.5)
+
+#graphique de R finale en fonction de I et R
+graph.imageRIR <- function(fishing,freq,it=10,pas=0.1){
+  
+  matC <- matrix(0, nrow = 21,ncol = 26)
+  matsd <- matrix(0, nrow = 21,ncol = 26)
+  
+  
+  f0<-fishing
+  l<-freq
+  for (i in 1:21) {
+    for (j in 1:26){
+      res <- vector(length = 0)
+      for (z in 1:it) {
+        R1 <- i*0.1+0.9
+        imp <- j*0.04-0.04
+        w <- corailstochastiquev2(R0=R1,f=f0, lambda = l,impact = imp,dt=pas, graph = F)[2]
+        res<-c(res,w)
+      }
+      matC[i,j]<-mean(res)
+      matsd[i,j]<-sd(res)
+    }
+  }
+  
+  x_values <- seq(0, 1, length.out = ncol(matC))
+  y_values <- seq(1, 3, length.out = nrow(matC))
+  # Plot the matrix as an image with different colored pixels
+  
+  par(mfrow=c(1,2))
+  image.plot(x = x_values, y = y_values, t(matC), col = viridis(20), 
+             xlab = "impact", ylab = "Rugosité initiale", 
+             main=c("moyenne de R finale",paste(c("fréq:1/",1/l,", fishing:",f0),collapse = "")))
+  image.plot(x = x_values, y = y_values, t(matsd), col = viridis(20),
+             xlab = "impact", ylab = "Rugosité initiale",
+             main=c("écart-type de R finale",paste(c("fréq:1/",1/l,", fishing:",f0),collapse = "")))
+}
+graph.imageRIR(fishing = 0.5, freq = 1/20, it=2, pas = 0.5)
+
+```
+
+
+Dans cette section, il est décrit 
 
 La relation entre l'effort de peche et le niveau d'impact des ouragant sur les récif corialien avec 3 niveau de rugosité de départ :
 
+```{r}
 
-La relation entre l'effort de peche et la rugosité avec un niveau d'impact des ouragant sur les récif corialien stochastique :
+#graphique de C final en fonction de I et f
+graph.imageCIf <- function(R0,freq,it=10,pas=0.1){
+  
+  matC <- matrix(0, nrow = 21,ncol = 26)
+  matsd <- matrix(0, nrow = 21,ncol = 26)
+  
+  R1<-R0
+  l<-freq
+  for (i in 1:21) {
+    for (j in 1:26){
+      res <- vector(length = 0)
+      for (z in 1:it) {
+        f0 <- i*0.05-0.05
+        imp <- j*0.04-0.04
+        w <- corailstochastiquev2(R0=R1,f=f0, lambda = l,impact = imp,dt=pas, graph = F)[1]
+        res<-c(res,w)
+      }
+      matC[i,j]<-mean(res)
+      matsd[i,j]<-sd(res)
+    }
+  }
+  
+  x_values <- seq(0, 1, length.out = ncol(matC))
+  y_values <- seq(0, 1, length.out = nrow(matC))
+  # Plot the matrix as an image with different colored pixels
+  
+  par(mfrow=c(1,2))
+  image.plot(x = x_values, y = y_values, t(matC), col = viridis(20), 
+             xlab = "impact", ylab = "Effort de pêche", 
+             main=c("moyenne de C finale",paste(c("fréq:1/",1/l,", rug. ini:",R0),collapse = "")))
+  image.plot(x = x_values, y = y_values, t(matsd), col = viridis(20),
+             xlab = "impact", ylab = "Effort de pêche",
+             main=c("écart-type de C finale",paste(c("fréq:1/",1/l,", rug. ini:",R0),collapse = "")))
+}
+graph.imageCIf(R0=2,freq = 1/20,it=2,pas = 0.5)
+
+
+#graphique de R finale en fonction de I et f
+graph.imageRIf <- function(R0,freq,it=10,pas=0.1){
+  
+  matC <- matrix(0, nrow = 21,ncol = 26)
+  matsd <- matrix(0, nrow = 21,ncol = 26)
+  
+  R1<-R0
+  l<-freq
+  for (i in 1:21) {
+    for (j in 1:26){
+      res <- vector(length = 0)
+      for (z in 1:it) {
+        f0 <- i*0.05-0.05
+        imp <- j*0.04-0.04
+        w <- corailstochastiquev2(R0=R1,f=f0, lambda = l,impact = imp,dt=pas, graph = F)[2]
+        res<-c(res,w)
+      }
+      matC[i,j]<-mean(res)
+      matsd[i,j]<-sd(res)
+    }
+  }
+  
+  x_values <- seq(0, 1, length.out = ncol(matC))
+  y_values <- seq(0, 1, length.out = nrow(matC))
+  # Plot the matrix as an image with different colored pixels
+  
+  par(mfrow=c(1,2))
+  image.plot(x = x_values, y = y_values, t(matC), col = viridis(20), 
+             xlab = "impact", ylab = "Effort de pêche", 
+             main=c("moyenne de R finale",paste(c("fréq:1/",1/l,", rug. ini:",R0),collapse = "")))
+  image.plot(x = x_values, y = y_values, t(matsd), col = viridis(20),
+             xlab = "impact", ylab = "Effort de pêche",
+             main=c("écart-type de R finale",paste(c("fréq:1/",1/l,", rug. ini:",R0),collapse = "")))
+}
+graph.imageRIf(R0=2,freq = 1/20,it=2,pas = 0.5)
+```
+
+
 
 # Référence
