--- a/version-propre.Rmd
+++ b/version-propre.Rmd
@@ -15,11 +15,13 @@ output: html_document
 
 ### Question biologique : 
 
-Est ce que la résilience des récifs coraliens est suffisante pour lutter contre les facteur de stress tels que la surpêche et les ouragans? 
+Comment la résilience des récifs coralliens varie-t-elle en fonction la surpêche et des ouragans?
 
 ### Hypothèse :
 
-Elle est suffisante jusqu'à une certaine limite qui dépend beaucoup de la complexité du corail, le l'effort de pêche et de l'impact aléatoire des ouragans.
+1. La résilience diminue quand l'effort de peche augmente.
+2. La résilience dimniue quand les ouragan sont plus fréquence. 
+3. La résilience dimniue quand les ouragan sont plus puissants.
 
 ### Données :  
 <div style="width: 85%; margin: 0 auto;">
@@ -45,6 +47,7 @@ Elle est suffisante jusqu'à une certaine limite qui dépend beaucoup de la comp
 | te        | variable| Temps écoulé depuis le dernier ouragan en année |
 | sigma     | 0.05   | Écart maximal de la variabilité des impacts des ouragans d'epsilon |
 | epsilon   | entre 0 et 1| Variable aléatoire suivant une distribution normale standard qui décrit la composante aléatoire des impacts des ouragans sur le corail |
+
 #### Tableau 2 : Variable utiliser dans le modèle de référence et leur définition anisi que leurs limites.
 | Variable | Valeur possible | Définition |
 |:--:|:----:|:--------------|
@@ -56,15 +59,22 @@ Elle est suffisante jusqu'à une certaine limite qui dépend beaucoup de la comp
 </div>
 
 ### Méthode :
-Modèle :  
+Modèle rugosité fixe:  
 <div style="margin: 0 auto;">
 $\frac{dC}{dt} = \small{rTC - dC - aMC}$   
 $\frac{dM}{dt} = \small{aMC} - \frac{\alpha \frac{P}{\beta}M}{M + Y} - \small{\gamma MY}$  
 $\frac{dP}{dt} = \small{sP(1 -} \frac{P}{\beta K(M+T,R)} \small{ - sfP}$  
-$\frac{dR}{dt} = \small{h_GC(3-R) - h_E(1-C)(R-1)}$  
 $\frac{dY}{dt} = \small{1 - M - C}$  
+
 La capacité de support de l'environnement pour le parrofishs prendre en compte l'abondance des algues, qui constituent leur nourriture, ainsi que la qualité de l'habitat K(M + T, R).  
 $\small{K(M+T,R) = }\frac{(c1R + c2)}{K_{max}}\frac{\delta(M+Y)}{1 + v(M+Y)}$
+
+Modèle avec un rugosité variable:  
+$\frac{dC}{dt} = \small{rTC - dC - aMC}$   
+$\frac{dM}{dt} = \small{aMC} - \frac{\alpha \frac{P}{\beta}M}{M + Y} - \small{\gamma MY}$  
+$\frac{dP}{dt} = \small{sP(1 -} \frac{P}{\beta K(M+T,R)} \small{ - sfP}$  
+$\frac{dR}{dt} = \small{h_GC(3-R) - h_E(1-C)(R-1)}$  
+$\frac{dY}{dt} = \small{1 - M - C}$ 
 
 Modèle Nondimentionner par rapport taux de croissance des parrofish par année:  
 $\frac{dC}{dts} = (\small{rTC - dC - aMC})\frac{1}{s}$   
@@ -81,6 +91,7 @@ $\small{dR = g_R(C,M,P,R,t)dt - (R-1)(G() + \sigma \epsilon)dq}$
 $\small{dY = 1 - M - C}$  
 
 $\small{F() = 0.0512 + 0.0176*te}$ avec un maximun de F() = 0.5.
+G() est soit 0.5 pour
 
 où $\small{g_C(C,M,P,R,t),g_M(C,M,P,R,t),g_P(C,M,P,R,t),g_R(C,M,P,R,t)}$ sont des fonctions qui represente le modèle.  
 Et où q est un processus de saut de Poisson avec un taux de saut λ tel que dq = 0 avec une probabilité de 1 - λdt et dq = 1 avec une probabilité de λdt.  
@@ -93,9 +104,13 @@ Et où q est un processus de saut de Poisson avec un taux de saut λ tel que dq 
 5. Le gazon d'algue correspond a tout la surface qui n'est pas des coraux ou des macroalgue.
 6. Les ouragans n'ont pas d'effets directs significatifs sur l'abondance ou la croissance des parrofishs. 
 7. Les macroalgues on le même niveau de dommage peu importe le niveau d'impact des ouragan. 
-8. Les ouragans on trois niveau d'impacts éléver, moyen et faible et trois fréquences moyennes soit 1 par 9 ans, 1 par 15 ans et 1 par 30 ans.
+8. Les ouragans ont un impact et une féquense constante sur toute la duré de la simulation.
 9. La distribution des coraux, des algues macroscopiques et des poissons perroquets dans l'espace n'a pas d'impact sur leur dynamique. 
-10. Un ouragan affecte l'ensemble de l'écosysteme de fasson égale.  
+10. Un ouragan affecte l'ensemble de l'écosysteme de facon égale. 
+11. Les ouragan suit un processus de saut de Poisson avec un taux de saut λ tel que dq = 0 avec une probabilité de 1 - λdt et dq = 1 avec une probabilité de λdt.
+12. Tous les parametres du modele sont représentatif de la situation réel de l'écosysteme.
+13. Il est impossible pour le corail et les macroalgue de s'éteindre totalement.
+
 
 ### Calcul :
 
@@ -139,7 +154,7 @@ dessinSol <- function(ic=c(M=0.001,C=0.56,P=0.75),
                                v=0.9877,
                                hG=0.03,
                                hE=0.01,
-                               gamma = 1.6,
+                               gamma = 0.8,
                                rug=2)) {
   soln <- ode(ic, times, func, parms)
   
@@ -219,7 +234,7 @@ corailstochastique <- function (R0,f,lambda=1/30,impact=2,dt=1,graph=FALSE){
   to <- 0
   
   #on pose les valeurs de départ et les paramètres
-  C <- 0.56*0.8
+  C <- 0.56
   M <- 0.01
   Y <- 0.43
   R <- R0
@@ -227,7 +242,7 @@ corailstochastique <- function (R0,f,lambda=1/30,impact=2,dt=1,graph=FALSE){
   a<-0.1
   g<-0.8
   d<-0.44
-  r<-0.8
+  r<-1
   f<-f
   s<-0.49
   ca<--(3.21)
@@ -383,7 +398,7 @@ graph.imageC <- function(impact,freq,it=10,pas=0.1){
              main=c("moyenne de C finale",paste(c("fréq:1/",1/l,", impact:",imp),collapse = "")))
   image.plot(x = x_values, y = y_values, t(matsd), col = viridis(20),
              xlab = "effort de pêche", ylab = "Rugosité initiale",
-             main=c("moyenne de C finale",paste(c("fréq:1/",1/l,", impact:",imp),collapse = "")))
+             main=c("Écart-type de C finale",paste(c("fréq:1/",1/l,", impact:",imp),collapse = "")))
 }
 ```
 
@@ -423,7 +438,7 @@ graph.imageR <- function(impact,freq,it=10,pas=0.1, graph=T, max=F){
                                                   collapse = "")))
     image.plot(x = x_values, y = y_values, t(matsd), col = viridis(20),
                xlab = "effort de pêche", ylab = "Rugosité initiale",
-               main=c("moyenne de R finale",paste(c("fréq:1/",1/l,", impact:",imp),
+               main=c("Écart-type de R finale",paste(c("fréq:1/",1/l,", impact:",imp),
                                                   collapse = "")))
   }
   #si on veut afficher la moyenne
@@ -453,7 +468,9 @@ colnames(coral) <- col_names
 image(1:nrow(coral), 1:ncol(coral), t(coral), col = plasma(40),
       xlab = "fishing effort", ylab = "R", main = "Graphique",axes=F);axis(side = 1, at = 1:ncol(coral), labels = col_names);axis(side = 2, at = 1:nrow(coral), labels = row_names)
 ```
+
 Affichage des graphique des valeur d'équilibre apres 30 ans de la couverture corallienne en fonction de l'effort de pêche par rapport au taux de croissance des poissons-perroquets (f) pour différentes valeurs de rugosité (R) afin de démontrer les implications de l'effort de pêche sur la couvuture des récif corailien.
+
 ```{r, eval=F}
 # Affichage pour figure 2
 par(mfrow=c(1,3))
@@ -516,8 +533,6 @@ lines(rep(1:length(categories), each = 1), rugfin[,3],
 legend("topright", legend = c("/9 ans", "/15 ans","/30 ans"),
        col = c("black","black","black"), pch = c(2,4,6), lty = c(1, 1),
        lwd = 1.5, bg = "white",cex = 0.65)
-
-
 ```
 
 Interprétation : 
