--- a/Partie_2.Rmd
+++ b/Partie_2.Rmd
@@ -74,7 +74,7 @@ $F() = 0.0512 + 0.0176*te$ avec un maximun de F() = 0.5.
 </div>
 
 ## Résultat
-Dans un premier lieux, la fonction de la simulation du modele XXX a été dévelloper. La fonction prend en argument la rugosité de départ (R0), l'effort de pêche (f), la probabilité qu'un ouragan survienne dans la zone des récit corailien par an (lamda), le niveau d'impact de l'ouragan (impact) et la duré des pas de temps sachant que 1 équivaut a faire un pas de temps d'une année (dt).
+Dans un premier lieu, la fonction de la simulation du modele XXX a été dévelloper. La fonction prend en argument la rugosité de départ (R0), l'effort de pêche (f), la probabilité qu'un ouragan survienne dans la zone des récit corailien par an (lamda), le niveau d'impact de l'ouragan (impact) et la duré des pas de temps sachant que 1 équivaut a faire un pas de temps d'une année (dt). Après une simulation de 100 ans, la fonction nous retourne la valeur de couverture du paysage par le corail et sa rugosité.
 ```{r}
 corailstochastiquev2 <- function (R0,f,lambda=1/30,impact=0.5,dt=1,graph=FALSE){
   #on instaure une étendue de temps
@@ -82,6 +82,7 @@ corailstochastiquev2 <- function (R0,f,lambda=1/30,impact=0.5,dt=1,graph=FALSE){
   t <- 0
   #le temps au dernier ouragan, en tenant compte que la simulation ne commence pas nécessairement juste après un ouragan
   to <- runif(1,0,25.5)
+  imp<-impact
   
   #on pose les valeurs de départ et les paramètres
   C <- 0.56
@@ -114,6 +115,8 @@ corailstochastiquev2 <- function (R0,f,lambda=1/30,impact=0.5,dt=1,graph=FALSE){
   
   while (t<tmax){
     
+    if(imp==2)impact <- runif(1)
+    
     #on effectue le tirage pour déterminer si il y a ou pas ouragan
     ouragan <- pmin(rpois(1,lambda*dt),1)
     #si oui ou non, on ajuste dq
@@ -135,7 +138,7 @@ corailstochastiquev2 <- function (R0,f,lambda=1/30,impact=0.5,dt=1,graph=FALSE){
       dommC <- C*(F + o*runif(1))*pmax(2*impact-0.5,0)
       dommM <- M*mH*(1+impact*0.25)
       dommR <- (R-1)*(G + o*runif(1))*(impact*2.25+0.25)
-    
+      
     }else{
       dommC <- 0
       dommM <- 0
@@ -184,6 +187,8 @@ corailstochastiquev2 <- function (R0,f,lambda=1/30,impact=0.5,dt=1,graph=FALSE){
 
 La relation entre la rugosité et le niveau d'impact des ouragants sur les récif corialien avec 3 niveau d'effort de peche : 
 
+Pour répondre a la question des effets des différente intensité des ouragans sur les récifs corailiens à long terme, on s'est dabord interesser à la relation qui il y avait entre la rugosité de départ et le niveau de l'intesité des ouragants. Nous avons fixer la fréquence des ouragan sur une meme zone de récif coralien avec une probabilité d'environs 1 aux 15 année et avons étudier trois différent effort de pêche soit 0.1, 0.4 et 0.7. C'est trois effort de peche represent un niveau faible, moyen et fort de peche. 
+
 ```{r}
 library(fields)
 #graphique de C en fonction de I et R
@@ -208,7 +213,7 @@ graph.imageCIR <- function(fishing,freq,it=10,pas=0.1){
       matsd[i,j]<-sd(res)
     }
   }
-
+  
   x_values <- seq(0, 1, length.out = ncol(matC))
   y_values <- seq(1, 3, length.out = nrow(matC))
   # Plot the matrix as an image with different colored pixels
@@ -221,9 +226,9 @@ graph.imageCIR <- function(fishing,freq,it=10,pas=0.1){
              xlab = "impact", ylab = "Rugosité initiale",
              main=c("écart-type de C finale",paste(c("fréq:1/",1/l,", fishing:",f0),collapse = "")))
 }
-graph.imageCIR(fishing = 0.1, freq = 1/15, it=5, pas = 0.5)
-graph.imageCIR(fishing = 0.4, freq = 1/15, it=5, pas = 0.5)
-graph.imageCIR(fishing = 0.7, freq = 1/15, it=5, pas = 0.5)
+graph.imageCIR(fishing = 0.1, freq = 1/15, it=5, pas = 0.1)
+graph.imageCIR(fishing = 0.4, freq = 1/15, it=5, pas = 0.1)
+graph.imageCIR(fishing = 0.7, freq = 1/15, it=5, pas = 0.1)
 
 #graphique de R finale en fonction de I et R
 graph.imageRIR <- function(fishing,freq,it=10,pas=0.1){
@@ -260,16 +265,17 @@ graph.imageRIR <- function(fishing,freq,it=10,pas=0.1){
              xlab = "impact", ylab = "Rugosité initiale",
              main=c("écart-type de R finale",paste(c("fréq:1/",1/l,", fishing:",f0),collapse = "")))
 }
-graph.imageRIR(fishing = 0.1, freq = 1/15, it=5, pas = 0.5)
-graph.imageRIR(fishing = 0.4, freq = 1/15, it=5, pas = 0.5)
-graph.imageRIR(fishing = 0.7, freq = 1/15, it=5, pas = 0.5)
+graph.imageRIR(fishing = 0.1, freq = 1/15, it=5, pas = 0.1)
+graph.imageRIR(fishing = 0.4, freq = 1/15, it=5, pas = 0.1)
+graph.imageRIR(fishing = 0.7, freq = 1/15, it=5, pas = 0.1)
 
 ```
 
-
-Dans cette section, il est décrit 
+Les résultats ont démontrer tres peux de fluctuation selon l'intensité de ouragan dans le cas des effort de peche faible et moyenne. Toutefois, avec un effort de peche élever, 
 
 La relation entre l'effort de peche et le niveau d'impact des ouragant sur les récif corialien avec 3 niveau de rugosité de départ :
+
+Pour réprensenté les résultat d'une facon différente, nous avons mis en relation l'effort de peche et le niveau d'impact des ouragant. Cette approche permet 
 
 ```{r}
 
@@ -354,6 +360,43 @@ graph.imageRIf <- function(R0,freq,it=10,pas=0.1){
 # graph.imageRIf(R0=1.8,freq = 1/15,it=5,pas = 0.5)
 # graph.imageRIf(R0=2.1,freq = 1/15,it=5,pas = 0.5)
 # graph.imageRIf(R0=2.4,freq = 1/15,it=5,pas = 0.5)
+```
+```{r}
+graph.imageCRf <- function(freq,it=10,pas=0.1){
+  
+  matC <- matrix(0, nrow = 21,ncol = 26)
+  matsd <- matrix(0, nrow = 21,ncol = 26)
+  
+  imp<-1
+  l<-freq
+  for (i in 1:21) {
+    for (j in 1:26){
+      res <- vector(length = 0)
+      for (z in 1:it) {
+        R1 <- i*0.1+0.9
+        f0 <- j*0.05-0.05
+        
+        w <- corailstochastiquev2(R0=R1,f=f0, lambda = l,impact = imp,dt=pas, graph = F)[1]
+        res<-c(res,w)
+      }
+      matC[i,j]<-mean(res)
+      matsd[i,j]<-sd(res)
+    }
+  }
+  
+  x_values <- seq(0, 1, length.out = ncol(matC))
+  y_values <- seq(1, 3, length.out = nrow(matC))
+  # Plot the matrix as an image with different colored pixels
+  
+  par(mfrow=c(1,2))
+  image.plot(x = x_values, y = y_values, t(matC), col = viridis(20), 
+             xlab = "Effort de pêche", ylab = "Rugosité initiale", 
+             main=c("moyenne de C finale",paste(c("fréq:1/",1/l),collapse = "")))
+  image.plot(x = x_values, y = y_values, t(matsd), col = viridis(20),
+             xlab = "Effort de pêche", ylab = "Rugosité initiale",
+             main=c("écart-type de C finale",paste(c("fréq:1/",1/l),collapse = "")))
+}
+graph.imageCRf(freq = 1/15,it=20,pas = 0.2)
 ```
 
 
