--- a/Partie_2.Rmd
+++ b/Partie_2.Rmd
@@ -78,6 +78,7 @@ $F() = 0.0512 + 0.0176*te$ avec un maximun de F() = 0.5.
 
 ## Résultat
 Dans un premier lieu, la fonction de la simulation du modele XXX a été dévelloper. La fonction prend en argument la rugosité de départ (R0), l'effort de pêche (f), la probabilité qu'un ouragan survienne dans la zone des récit corailien par an (lamda), le niveau d'impact de l'ouragan (impact) et la duré des pas de temps sachant que 1 équivaut a faire un pas de temps d'une année (dt). Après une simulation de 100 ans, la fonction nous retourne la valeur de couverture du paysage par le corail et sa rugosité.
+
 ```{r}
 corailstochastiquev2 <- function (R0,f,lambda=1/30,impact=0.5,dt=1,graph=FALSE){
   #on instaure une étendue de temps
@@ -226,9 +227,9 @@ graph.imageCIR <- function(fishing,freq,it=10,pas=0.1){
              xlab = "impact", ylab = "Rugosité initiale",
              main=c("écart-type de C finale",paste(c("fréq:1/",1/l,", fishing:",f0),collapse = "")))
 }
-graph.imageCIR(fishing = 0.1, freq = 1/15, it=5, pas = 0.1)
-graph.imageCIR(fishing = 0.4, freq = 1/15, it=5, pas = 0.1)
-graph.imageCIR(fishing = 0.7, freq = 1/15, it=5, pas = 0.1)
+graph.imageCIR(fishing = 0.1, freq = 1/15, it=2, pas = 0.5)
+graph.imageCIR(fishing = 0.4, freq = 1/15, it=2, pas = 0.5)
+graph.imageCIR(fishing = 0.7, freq = 1/15, it=2, pas = 0.5)
 
 #graphique de R finale en fonction de I et R
 graph.imageRIR <- function(fishing,freq,it=10,pas=0.1){
@@ -265,17 +266,17 @@ graph.imageRIR <- function(fishing,freq,it=10,pas=0.1){
              xlab = "impact", ylab = "Rugosité initiale",
              main=c("écart-type de R finale",paste(c("fréq:1/",1/l,", fishing:",f0),collapse = "")))
 }
-graph.imageRIR(fishing = 0.1, freq = 1/15, it=5, pas = 0.1)
-graph.imageRIR(fishing = 0.4, freq = 1/15, it=5, pas = 0.1)
-graph.imageRIR(fishing = 0.7, freq = 1/15, it=5, pas = 0.1)
+graph.imageRIR(fishing = 0.1, freq = 1/15, it=2, pas = 0.5)
+graph.imageRIR(fishing = 0.4, freq = 1/15, it=2, pas = 0.5)
+graph.imageRIR(fishing = 0.7, freq = 1/15, it=2, pas = 0.5)
 
 ```
 
-Les résultats ont démontrer tres peux de fluctuation selon l'intensité de ouragan dans le cas des effort de peche faible et moyenne. Toutefois, avec un effort de peche élever, 
+Les résultats ont démontrer tres peux de fluctuation selon l'intensité de ouragan dans le cas des effort de peche faible et moyenne. Il quand meme possible d'observer plus d'instabilité a fort impact. Avec un effort de peche élever, l'impact des ouragan est toutefois plus prononcer. Plus l'impact des ouragan est important, plus la rugosité necessaire a la résilence des corail est importante. 
 
 La relation entre l'effort de peche et le niveau d'impact des ouragant sur les récif corialien avec 3 niveau de rugosité de départ :
 
-Pour réprensenté les résultat d'une facon différente, nous avons mis en relation l'effort de peche et le niveau d'impact des ouragant. Cette approche permet 
+Pour réprensenté les résultat d'une facon différente, nous avons mis en relation l'effort de peche et le niveau d'impact des ouragant. Cette approche permet de mieux voir l'impact sur différente rugosité de départ.
 
 ```{r}
 
@@ -313,15 +314,9 @@ graph.imageCIf <- function(R0,freq,it=10,pas=0.1){
              xlab = "impact", ylab = "Effort de pêche",
              main=c("écart-type de C finale",paste(c("fréq:1/",1/l,", rug. ini:",R0),collapse = "")))
 }
-graph.imageCIf(R0=1.2,freq = 1/15,it=10,pas = 0.1)
-# graph.imageCIf(R0=1.4,freq = 1/15,it=2,pas = 0.25)
-# graph.imageCIf(R0=1.6,freq = 1/15,it=2,pas = 0.25)
-# graph.imageCIf(R0=1.8,freq = 1/15,it=2,pas = 0.25)
-# graph.imageCIf(R0=2.0,freq = 1/15,it=2,pas = 0.25)
-# graph.imageCIf(R0=2.2,freq = 1/15,it=2,pas = 0.25)
-# graph.imageCIf(R0=2.4,freq = 1/15,it=2,pas = 0.25)
-# graph.imageCIf(R0=2.6,freq = 1/15,it=2,pas = 0.25)
-# graph.imageCIf(R0=2.8,freq = 1/15,it=2,pas = 0.25)
+graph.imageCIf(R0=1.8,freq = 1/15,it=2,pas = 0.5)
+graph.imageCIf(R0=2.1,freq = 1/15,it=2,pas = 0.5)
+graph.imageCIf(R0=2.4,freq = 1/15,it=2,pas = 0.5)
 
 #graphique de R finale en fonction de I et f
 graph.imageRIf <- function(R0,freq,it=10,pas=0.1){
@@ -357,47 +352,14 @@ graph.imageRIf <- function(R0,freq,it=10,pas=0.1){
              xlab = "impact", ylab = "Effort de pêche",
              main=c("écart-type de R finale",paste(c("fréq:1/",1/l,", rug. ini:",R0),collapse = "")))
 }
-# graph.imageRIf(R0=1.8,freq = 1/15,it=5,pas = 0.5)
-# graph.imageRIf(R0=2.1,freq = 1/15,it=5,pas = 0.5)
-# graph.imageRIf(R0=2.4,freq = 1/15,it=5,pas = 0.5)
+graph.imageRIf(R0=1.8,freq = 1/15,it=2,pas = 0.5)
+graph.imageRIf(R0=2.1,freq = 1/15,it=2,pas = 0.5)
+graph.imageRIf(R0=2.4,freq = 1/15,it=2,pas = 0.5)
 ```
+Dans ces résultat, il est possible de remarquer un leger tendance. Plus l'impact des ouragan est elever, plus l'effort de peche doit etre réduit pour permetre au corail un résilence. 
 
-```{r}
-graph.imageCRf <- function(freq,it=10,pas=0.1){
-  
-  matC <- matrix(0, nrow = 21,ncol = 26)
-  matsd <- matrix(0, nrow = 21,ncol = 26)
-  
-  imp<-2
-  l<-freq
-  for (i in 1:21) {
-    for (j in 1:26){
-      res <- vector(length = 0)
-      for (z in 1:it) {
-        R1 <- i*0.1+0.9
-        f0 <- j*0.05-0.05
-        
-        w <- corailstochastiquev2(R0=R1,f=f0, lambda = l,impact = imp,dt=pas, graph = F)[1]
-        res<-c(res,w)
-      }
-      matC[i,j]<-mean(res)
-      matsd[i,j]<-sd(res)
-    }
-  }
-  
-  x_values <- seq(0, 1, length.out = ncol(matC))
-  y_values <- seq(1, 3, length.out = nrow(matC))
-  # Plot the matrix as an image with different colored pixels
-  
-  par(mfrow=c(1,2))
-  image.plot(x = x_values, y = y_values, t(matC), col = viridis(20), 
-             xlab = "Effort de pêche", ylab = "Rugosité initiale", 
-             main=c("moyenne de C finale",paste(c("fréq:1/",1/l),collapse = "")))
-  image.plot(x = x_values, y = y_values, t(matsd), col = viridis(20),
-             xlab = "Effort de pêche", ylab = "Rugosité initiale",
-             main=c("écart-type de C finale",paste(c("fréq:1/",1/l),collapse = "")))
-}
-graph.imageCRf(freq = 1/9,it=20,pas = 0.2)
-```
+# Discution 
+
+Nos résutat on montrer tres peu d'impact des ouragant sur les récif corail à l'exeption a de tres au niveau d'effort de peche. 
 
 # Référence
